--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,12 @@
 @charset "utf-8";
 /* CSS Document */
 
+* {
+	box-sizing: border-box;
+}
+
 body,td,th,p{
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: "Roboto", sans-serif, Arial, Helvetica;
 	font-size: 10pt;
 	color: #333;
 	line-height: 1.5;
@@ -18,7 +22,7 @@ ul, li {
 	color: #333;
 }
 a {
-	color: orange;
+	color: #7F6200;
 	text-decoration: none;
 }
 a:hover, a:focus {
@@ -36,86 +40,117 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 	display: block;
 }
 #maincontent {
-  background-color: #f3f3f3;
+	background-color:  #252831;
   min-height: 100%;
 }
 #footer {
-  background-color: #444;
-  color: #aaa;
+  background-color: #7F6200;
+	box-shadow: 0 4px 14px 0 rgba(0,0,0,.1), 0 0 0 1px rgba(0,0,0,.1);
+  color: #252831;
   font-size: 8pt;
   letter-spacing: 1px;
   padding: 25px;
   text-align: center;
   text-transform: uppercase;
+	font-weight: 600;
+}
+
+#footer a {
+	margin-left: 5px;
+	margin-right: 5px;
+	color: white;
+	text-decoration: none;
+	letter-spacing: 1em;
 }
 /* ====================== Navigation ====================== */
 nav {
-  width: 100%;
+	height: 100%;
+  text-align: center;
+	color: currentColor;
+	display: flex;
+	flex-wrap: nowrap;
+	justify-content: space-between;
+	width: 100%;
   height: 80px;
-  background-color: #252831;
-  text-align:center;
+	color: #7F6200;
+	background-color: #252831;
+	border-bottom: 1px solid #7F6200;
 }
+
+
 nav h1 {
-  margin: auto;
+	font-family: "Montserrat", sans-serif;
+	font-weight: 600;
+	font-size: 1.5em;
+	margin: auto;
 }
-nav h1 a {
-  color: #fff;
-  font-size: 14pt;
-  font-weight: 200;
-  letter-spacing: 10px;
-  text-transform: uppercase;
+
+nav a {
+  color: inherit;
+  text-transform: capitalize;
+	display: inline-flex;
+	align-items: center;
+	padding: 0 1em;
+	height: 100%;
 }
+
 #breadcrumb {
-    padding: 10px 40px 16px;
-    list-style: none;
-    background-color: #eee;
-    font-size: 17px;
-    margin: 0;
-    width: calc(50% - 80px);
+  padding: 10px 40px 16px;
+  list-style: none;
+	background-color:  #252831;
+  font-size: 17px;
+  margin: 0;
+	width: 100%;
 }
 
 /* Display list items side by side */
 #breadcrumb li {
-    display: inline;
+  display: inline;
+	color:#7F6200;
 }
 
 /* Add a slash symbol (/) before/behind each list item */
 #breadcrumb li+li:before {
-    padding: 8px;
-    color: black;
-    content: "/\00a0";
+  padding: 8px;
+  color: #7F6200;
+  content: "/\00a0";
 }
 
 /* Add a color to all links inside the list */
 #breadcrumb li a {
-    color: #0275d8;
-    text-decoration: none;
+  color: #AE8913;
+  text-decoration: none;
 }
 
 /* Add a color on mouse-over */
 #breadcrumb li a:hover {
-    color: #01447e;
-    text-decoration: underline;
+  color: #01447e;
+  text-decoration: underline;
 }
 /* ====================== Map ====================== */
 #map {
-  height: 400px;
+  height: 40vh;
   width: 100%;
   background-color: #ccc;
 }
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
-  width: 100%;
-  height: 50px;
-  background-color: #3397DB;
-  align-items: center;
+	width: 100%;
+  height: 100%;
+	display: flex;
+	align-items: center;
+	display: inline-flex;
+	float: right;
+	background-color: #252831;
+	justify-content: center;
 }
+
 .filter-options h2 {
-  color: white;
+  color: #7F6200;
   font-size: 1rem;
   font-weight: normal;
   line-height: 1;
-  margin: 0 20px;
+  margin: 0.5em 0.5em 0 1em;
 }
 .filter-options select {
   background-color: white;
@@ -124,79 +159,83 @@ nav h1 a {
   font-size: 11pt;
   height: 35px;
   letter-spacing: 0;
-  margin: 10px;
   padding: 0 10px;
   width: 200px;
+	cursor: pointer;
+	margin-top: 1.5em;
+	margin: 1.5em 1em 1em 0.2em;
 }
 
 /* ====================== Restaurant Listing ====================== */
+
 #restaurants-list {
-  background-color: #f3f3f3;
+  background-color: #252831;
   list-style: outside none none;
   margin: 0;
-  padding: 30px 15px 60px;
+	padding: 1em 0 0 1em;
   text-align: center;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
 }
 #restaurants-list li {
   background-color: #fff;
-  border: 2px solid #ccc;
+	background-color: #252831;
   font-family: Arial,sans-serif;
   margin: 15px;
   min-height: 380px;
-  padding: 0 30px 25px;
+	padding: 0;
   text-align: left;
-  width: 270px;
+  width: 320px;
+	border: 1px solid #7F6200;
+	border-radius: 0 25px 0 25px;
 }
 #restaurants-list .restaurant-img {
   background-color: #ccc;
   display: block;
   margin: 0;
   max-width: 100%;
-  min-height: 248px;
+  min-height: 10em;
   min-width: 100%;
+	border-radius: 0 25px 0 0px;
 }
 #restaurants-list li h1 {
-  color: #f18200;
+  color: #7F6200;
   font-family: Arial,sans-serif;
-  font-size: 14pt;
-  font-weight: 200;
+	font-size: 1.2em;
+    font-weight: 600;
   letter-spacing: 0;
   line-height: 1.3;
   margin: 20px 0 10px;
+	margin: 1em 0;
   text-transform: uppercase;
 }
 #restaurants-list p {
+	color: white;
   margin: 0;
   font-size: 11pt;
 }
 #restaurants-list li a {
-  background-color: orange;
-  border-bottom: 3px solid #eee;
   color: #fff;
   display: inline-block;
   font-size: 10pt;
   margin: 15px 0 0;
-  padding: 8px 30px 10px;
-  text-align: center;
+  padding: 10px 30px 20px 30px;
   text-decoration: none;
-  text-transform: uppercase;
 }
+
 
 /* ====================== Restaurant Details ====================== */
 .inside header {
-  position: fixed;
   top: 0;
   width: 100%;
   z-index: 1000;
 }
+
 .inside #map-container {
-  background: blue none repeat scroll 0 0;
-  height: 87%;
-  position: fixed;
-  right: 0;
-  top: 80px;
-  width: 50%;
+	height: 40vh;
 }
+
 .inside #map {
   background-color: #ccc;
   height: 100%;
@@ -205,10 +244,10 @@ nav h1 a {
 .inside #footer {
   bottom: 0;
   position: absolute;
-  width: 50%;
+  width: 100%;
 }
 #restaurant-name {
-  color: #f18200;
+  color: #7F6200;
   font-family: Arial,sans-serif;
   font-size: 20pt;
   font-weight: 200;
@@ -219,34 +258,47 @@ nav h1 a {
 }
 #restaurant-img {
 	width: 90%;
+	border-radius: 2em 0 2em 0;
 }
+
 #restaurant-address {
-  font-size: 12pt;
-  margin: 10px 0px;
+	font-size: 1.4em;
+	margin: 10px 0px;
+	color: #7F6200;
+	margin-right: auto;
+	margin-left: auto;
+	margin-bottom: 1.5em;
 }
 #restaurant-cuisine {
-  background-color: #333;
-  color: #ddd;
+  background-color: #7F6200;
+  color: black;
   font-size: 12pt;
-  font-weight: 300;
+  font-weight: 700;
   letter-spacing: 10px;
   margin: 0 0 20px;
   padding: 2px 0;
   text-align: center;
   text-transform: uppercase;
 	width: 90%;
+	margin-top: 1em;
 }
 #restaurant-container, #reviews-container {
-  border-bottom: 1px solid #d9d9d9;
-  border-top: 1px solid #fff;
-  padding: 140px 40px 30px;
-  width: 50%;
+  border-bottom: 1px solid #7F6200;
+  border-top: 1px solid #7F6200;
+  width: 100%;
+	padding: 20px 2%;
+	display: flex;
+ 	flex-direction: column;
+ 	justify-content: center;
+	align-items: center;
 }
+
+
 #reviews-container {
   padding: 30px 40px 80px;
 }
 #reviews-container h2 {
-  color: #f58500;
+  color: #7F6200;
   font-size: 24pt;
   font-weight: 300;
   letter-spacing: -1px;
@@ -255,21 +307,115 @@ nav h1 a {
 #reviews-list {
   margin: 0;
   padding: 0;
+	margin-right: auto;
+	margin-left: auto;
 }
 #reviews-list li {
-  background-color: #fff;
-    border: 2px solid #f3f3f3;
   display: block;
   list-style-type: none;
   margin: 0 0 30px;
   overflow: hidden;
   padding: 0 20px 20px;
   position: relative;
-  width: 85%;
+	width: 95%;
+  border: 1px solid #7F6200;
+  background-color: #252831;
+  color: white;
+	margin-left: 2.5%;
+	border-radius: 0 2em 0 2em;
 }
+
 #reviews-list li p {
   margin: 0 0 10px;
+	padding: 0 20px;
+	color: lightgray;
 }
+
 #restaurant-hours td {
   color: #666;
+}
+
+.rating {
+  text-transform: capitalize;
+  font-weight: 500;
+	margin-top: 2em;
+}
+
+.cuisine-type{
+	float: right;
+	text-transform: uppercase;
+	font-weight: 600;
+	color:#7F6200;
+}
+
+.divider {
+ display: block;
+ height: 1px;
+ border: 0;
+ border-top: 1px solid #7F6200;
+ margin: 1em 0;
+ padding: 0;
+}
+
+
+.reviews-name {
+  font-size: 1.2em;
+  font-weight: bold;
+  width: 33%;
+  display: inline-block;
+}
+
+.reviews-date {
+  width: 33%;
+  display: inline-block;
+}
+
+.reviews-rating {
+  font-weight: bold;
+  width: 33%;
+  display: inline-block;
+  text-align: right;
+}
+
+
+#restaurant-hours {
+  margin-bottom: 15px;
+  width: 85%;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+#restaurant-inner-container {
+  display: flex;
+  flex-direction: row;
+  width: 90%;
+  justify-content: center;
+}
+
+
+#map-container {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+
+.reviews-header {
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-pack: justify;
+	-ms-flex-pack: justify;
+	padding: 1em;
+	padding-bottom: 0.25rem;
+}
+
+#reviews-list li .reviews-header p {
+	margin: 0 0 10px;
+	padding: 0 20px;
+	color: #7F6200;
+}
+
+#reviews-list li .reviews-comments{
+	text-align: justify;
 }
