--- a/css/styles.css
+++ b/css/styles.css
@@ -11,38 +11,47 @@ body,td,th,p{
 	color: #333;
 	line-height: 1.5;
 }
+
 body {
 	background-color: #fdfdfd;
 	margin: 0;
 	position:relative;
 }
+
 ul, li {
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 10pt;
 	color: #333;
 }
+
 a {
 	color: #7F6200;
 	text-decoration: none;
 }
+
 a:hover, a:focus {
 	color: #3397db;
 	text-decoration: none;
 }
+
 a img{
 	border: none 0px #fff;
 }
+
 h1, h2, h3, h4, h5, h6 {
   font-family: Arial, Helvetica, sans-serif;
   margin: 0 0 20px;
 }
+
 article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
 	display: block;
 }
+
 #maincontent {
 	background-color:  #252831;
   min-height: 100%;
 }
+
 #footer {
   background-color: #7F6200;
 	box-shadow: 0 4px 14px 0 rgba(0,0,0,.1), 0 0 0 1px rgba(0,0,0,.1);
@@ -62,7 +71,9 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 	text-decoration: none;
 	letter-spacing: 1em;
 }
+
 /* ====================== Navigation ====================== */
+
 nav {
 	height: 100%;
   text-align: center;
@@ -79,7 +90,7 @@ nav {
 
 
 nav h1 {
-	font-family: "Montserrat", sans-serif;
+	font-family: "Roboto", sans-serif;
 	font-weight: 600;
 	font-size: 1.5em;
 	margin: auto;
@@ -127,12 +138,14 @@ nav a {
   color: #01447e;
   text-decoration: underline;
 }
+
 /* ====================== Map ====================== */
 #map {
   height: 40vh;
   width: 100%;
   background-color: #ccc;
 }
+
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
 	width: 100%;
@@ -152,6 +165,7 @@ nav a {
   line-height: 1;
   margin: 0.5em 0.5em 0 1em;
 }
+
 .filter-options select {
   background-color: white;
   border: 1px solid #fff;
@@ -167,7 +181,6 @@ nav a {
 }
 
 /* ====================== Restaurant Listing ====================== */
-
 #restaurants-list {
   background-color: #252831;
   list-style: outside none none;
@@ -178,6 +191,7 @@ nav a {
 	flex-wrap: wrap;
 	justify-content: center;
 }
+
 #restaurants-list li {
   background-color: #fff;
 	background-color: #252831;
@@ -190,6 +204,7 @@ nav a {
 	border: 1px solid #7F6200;
 	border-radius: 0 25px 0 25px;
 }
+
 #restaurants-list .restaurant-img {
   background-color: #ccc;
   display: block;
@@ -199,22 +214,25 @@ nav a {
   min-width: 100%;
 	border-radius: 0 25px 0 0px;
 }
+
 #restaurants-list li h1 {
   color: #7F6200;
-  font-family: Arial,sans-serif;
+  font-family: "Roboto",Arial,sans-serif;
 	font-size: 1.2em;
-    font-weight: 600;
+  font-weight: 600;
   letter-spacing: 0;
   line-height: 1.3;
   margin: 20px 0 10px;
 	margin: 1em 0;
   text-transform: uppercase;
 }
+
 #restaurants-list p {
 	color: white;
   margin: 0;
   font-size: 11pt;
 }
+
 #restaurants-list li a {
   color: #fff;
   display: inline-block;
@@ -223,7 +241,6 @@ nav a {
   padding: 10px 30px 20px 30px;
   text-decoration: none;
 }
-
 
 /* ====================== Restaurant Details ====================== */
 .inside header {
@@ -246,9 +263,10 @@ nav a {
   position: absolute;
   width: 100%;
 }
+
 #restaurant-name {
   color: #7F6200;
-  font-family: Arial,sans-serif;
+  font-family: "Roboto", Arial,sans-serif;
   font-size: 20pt;
   font-weight: 200;
   letter-spacing: 0;
@@ -256,6 +274,7 @@ nav a {
   text-transform: uppercase;
   line-height: 1.1;
 }
+
 #restaurant-img {
 	width: 90%;
 	border-radius: 2em 0 2em 0;
@@ -269,6 +288,7 @@ nav a {
 	margin-left: auto;
 	margin-bottom: 1.5em;
 }
+
 #restaurant-cuisine {
   background-color: #7F6200;
   color: black;
@@ -282,6 +302,7 @@ nav a {
 	width: 90%;
 	margin-top: 1em;
 }
+
 #restaurant-container, #reviews-container {
   border-bottom: 1px solid #7F6200;
   border-top: 1px solid #7F6200;
@@ -293,10 +314,10 @@ nav a {
 	align-items: center;
 }
 
-
 #reviews-container {
   padding: 30px 40px 80px;
 }
+
 #reviews-container h2 {
   color: #7F6200;
   font-size: 24pt;
@@ -304,12 +325,14 @@ nav a {
   letter-spacing: -1px;
   padding-bottom: 1pt;
 }
+
 #reviews-list {
   margin: 0;
   padding: 0;
 	margin-right: auto;
 	margin-left: auto;
 }
+
 #reviews-list li {
   display: block;
   list-style-type: none;
@@ -361,7 +384,6 @@ nav a {
  padding: 0;
 }
 
-
 .reviews-name {
   font-size: 1.2em;
   font-weight: bold;
@@ -381,7 +403,6 @@ nav a {
   text-align: right;
 }
 
-
 #restaurant-hours {
   margin-bottom: 15px;
   width: 85%;
@@ -396,13 +417,11 @@ nav a {
   justify-content: center;
 }
 
-
 #map-container {
   display: flex;
   flex-direction: column;
   width: 100%;
 }
-
 
 .reviews-header {
 	display: -webkit-box;
