--- a/css/responsiveness.css
+++ b/css/responsiveness.css
@@ -18,25 +18,37 @@
   }
 
 
+  #reviews-list li .reviews-header p, #reviews-list li .reviews-header time:nth-child(2){
+    padding-top: 5px;
+  }
+
+  #reviews-list li time {
+    text-align: center;
+  }
+
+  #restaurant-name {
+    font-size: 15pt;
+  }
+
 }
 
 @media screen and (min-width: 320px) and (max-width: 490px) {
   .reviews-name {
     font-size: 1em;
   }
-  .reviews-date {
-    font-size: 0.7em;
+
+  #reviews-list li time {
+    text-align: center;
   }
+
   .reviews-rating {
     font-size: 1em;
   }
 
   #restaurant-hours td {
-    font-size: 11px !important;
+    font-size: 12px !important;
   }
-
 }
-
 
 @media screen and (min-width: 500px) and (max-width: 650px) {
   #restaurant-img {
